# oxidize-rust

./: .gitignore  .travis.yml  Cargo.toml  build.rs
src/: account.rs  block.rs  bytes.rs  hash.rs  main.rs
src/chain/: consensus.rs  mod.rs
src/chain/encoding/: blockchain_entities.rs
src/chain/entity/: block.rs  header.rs  mod.rs  tx.rs
src/chain/rpc/: blockchain_service.rs  blockchain_service_grpc.rs  mod.rs
src/chain/wire/: mod.rs
src/node/: mod.rs
src/node/p2p/rpc/: mod.rs  node_discovery_service.rs  node_discovery_service_grpc.rs
src/wallet/rpc/: wallet_service.rs  wallet_service_grpc.rs
