[package]
name = "block_n_rust"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]

[dependencies]
byteorder = "1"
num-bigint = "0.1"
num-traits = "0.2"
rand = "0.4"
rust-crypto = "0.2.36"
rustc-serialize = "~0.3"
time = "0.1"
failure = "0.1.1"

grpc            = "0.2"
protobuf        = "1.4"
futures         = "0.1"
futures-cpupool = "0.1"
tls-api         = "0.1"

[build-dependencies]
protoc-rust-grpc = "0.2"
